k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-app-service
  labels: 
    app: wisecow-app
spec:
  type: NodePort  
  selector:
    app: wisecow-app    
  ports:    
  - protocol: TCP
    port: 4499           
    targetPort: 4499
    nodePort: 30080
